# UAC-Bypass-CPP

./: CMakeLists.txt  README.md
UAC-Bypass-lib/include/: ExampleThread.h  exports.h
UAC-Bypass-lib/src/: dllmain.cpp  example.cpp  exports.cpp
cmake/: warnings.cmake
tests/Test1/: main.cpp
tests/Test2/: main.cpp
